--- a/css/MENUCSS.css
+++ b/css/MENUCSS.css
@@ -66,7 +66,7 @@
 #single p {
   position:relative;
   right:4px;
-  bottom: 1%;
+  bottom: 25px;
 }
 #options {
   position:absolute;
@@ -90,7 +90,7 @@
 #options p {
   position:relative;
   right:4px;
-  bottom: 1%;
+  bottom: 25px;
   
 }
 
@@ -116,7 +116,7 @@
 #credits p {
   position:relative;
   right:4px;
-  bottom: 10%;
+  bottom: 25px;
   
 }
 
